# real-time-rendering

./: .gitignore  README.md  how-to-framework.txt
framework/: CMakeLists.txt  README.md  rtr.sublime-project  rtr.sublime-workspace
framework/apps/: CMakeLists.txt  app.cmake
framework/apps/rtr_animation_demo/: CMakeLists.txt  main.cpp
framework/apps/rtr_cloth/: CMakeLists.txt  README.md  main.cpp
framework/apps/rtr_intermediate_demo/: CMakeLists.txt  main.cpp
framework/apps/rtr_physics_demo/: CMakeLists.txt  main.cpp
framework/apps/rtr_terrain_demo/: CMakeLists.txt  main.cpp
framework/apps/rtr_test/: CMakeLists.txt  main.cpp
framework/apps/rtr_transformation_demo/: CMakeLists.txt  main.cpp
framework/cmake/modules/: FindArmadillo.cmake  FindBLAS.cmake  FindGLUT.cmake  FindOpenCV.cmake  FindSDL2.cmake  FindSOIL.cmake  findGLFW3.cmake  find_freeimage.cmake  find_x11.cmake
framework/install/include/rtr/ren/: ParticleShaders.h  SimpleShaders.h  TextureShaders.h
framework/install/resources/shaders/: TerrainShader.vert  particlePoint.frag  particlePoint.vert  particleQuad.geom  particleTexture.frag  particleTexture.geom  skybox.frag  skybox.vert  tutorial.frag
framework/rendering/: CMakeLists.txt
framework/rendering/include/rtr/animation/: loader.h
framework/rendering/include/rtr/animation/animate/: model.h
framework/rendering/include/rtr/animation/camera/: camera.h
framework/rendering/include/rtr/animation/collada_parser/: model.h
framework/rendering/include/rtr/animation/controls/: 2D_vector.h  input.h
framework/rendering/include/rtr/animation/display/: display.h
framework/rendering/include/rtr/animation/loader/: loader.h
framework/rendering/include/rtr/animation/opengl/: camera.h  display.h  mesh.h  shader.h
framework/rendering/include/rtr/camera/: Camera.h
framework/rendering/include/rtr/gamepad/: joy.h  updates.h
framework/rendering/include/rtr/model/: model.hpp  model_loader.hpp
framework/rendering/include/rtr/object/: object.hpp
framework/rendering/include/rtr/ren/: clothSystem.h  headers.hpp  particleData.hpp  particleEffects.hpp  particleEmitter.hpp  particleGenerators.hpp  particleHeaders.hpp  particleRenderer.hpp  particleSystem.hpp  particleUpdaters.hpp
framework/rendering/include/rtr/shaders/: ParticleShaders.h  SimpleShaders.h  SkyboxShaders.h  TerrainShaders.h  TextureShaders.h
framework/rendering/include/rtr/some_module/: headers.hpp
framework/rendering/include/rtr/terrain/: Skybox.h  Terrain.h  VertexArrayObject.h
framework/rendering/include/rtr/transformation/: camera.h  display.h  mesh.h  shader.h  texture.h  transform.h
framework/rendering/src/animation/: loader.cpp
framework/rendering/src/animation/animate/: model.cpp
framework/rendering/src/animation/collada_parser/: model.cpp
framework/rendering/src/animation/controls/: input.cpp
framework/rendering/src/animation/display/: display.cpp
framework/rendering/src/animation/loader/: loader.cpp  mesh.cpp  shader.cpp
framework/rendering/src/animation/opengl/: display.cpp  mesh.cpp  shader.cpp
framework/rendering/src/camera/: Camera.cpp
framework/rendering/src/gamepad/: joy.cpp  updates.cpp
framework/rendering/src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_freeglut.cpp  imgui_impl_opengl2.cpp  imgui_impl_opengl3.cpp  imgui_widgets.cpp
framework/rendering/src/loader/: obj_loader.cpp
framework/rendering/src/model/: model.cpp  model_loader.cpp  tiny_obj_loader.cpp
framework/rendering/src/object/: object.cpp
framework/rendering/src/ren/: clothSystem.cpp  particleData.cpp  particleEffects.cpp  particleEmitter.cpp  particleGenerators.cpp  particleRenderer.cpp  particleSystem.cpp  particleUpdaters.cpp
framework/rendering/src/shaders/: ParticleShaders.cpp  SimpleShaders.cpp  SkyboxShaders.cpp  TerrainShaders.cpp  TextureShaders.cpp
framework/rendering/src/terrain/: Skybox.cpp  Terrain.cpp  VertexArrayObject.cpp
framework/rendering/src/transformation/: display.cpp  mesh.cpp  shader.cpp  stb_image.c  texture.cpp
framework/resources/collada/boy/: rigged.dae
framework/resources/shaders/: TerrainShader.frag  TerrainShader.vert  basicShader.fs  basicShader.vs  cloth.frag.glsl  cloth.vert.glsl  color.frag  particleFire.frag  particleFire.geom  particlePoint.frag  particlePoint.vert  particleQuad.geom  particleQuad.vert  particleTexture.frag  particleTexture.geom  rain.frag  rain.vert  skybox.frag  skybox.vert  sphere.vert.glsl  tutorial.frag  tutorial.vert
